# GEPEngine

./: CMakeLists.txt  GUI stuff man.txt  README.md  READMEMINE.txt  for end.txt  more stuff mate.txt  mroeshitman.txt  privatised classes.txt
Shaders/: GUIFragment.txt  GUIVertex.txt  gui.vert  notGUI.FRAG  notGUI.VERT
src/GEPEngine/: ALAudio.cpp  ALAudio.h  ALListener.cpp  ALListener.h  ALSound.cpp  ALSound.h  ALSoundSrc.cpp  ALSoundSrc.h  BillBoardRenderer.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Curuthers.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  GUI.cpp  GUI.h  GamepadInput.cpp  GamepadInput.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  MouseInput.cpp  MouseInput.h  MyEngine.h  NativeWindow.cpp  (+17 more)
src/GEPEngine/nppBackup/: Core.h.2023-09-29_153946.bak
src/Graphics/: Camera.cpp  Camera.h  Rend.h  RenderTexture.cpp  RenderTexture.h  Resource.cpp  Resource.h  Resources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TriangleRenderer.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  WavefrontMesh.cpp  WavefrontMesh.h
src/demo/: Curuthers.cpp  Curuthers.h  Enemy.cpp  Enemy.h  Floor.cpp  Floor.h  GameLoop.cpp  GameLoop.h  Player.cpp  Player.h  billboard.cpp  billboard.h  evilBloke.cpp  evilBloke.h  main.cpp
